# animated-art-engine

./: Makefile  global_config.json  pyproject.toml
json/: 0.json  1.json  10.json  100.json  1000.json  1001.json  1002.json  1003.json  1004.json  1005.json  1006.json  1007.json  1008.json  1009.json  101.json  1010.json  1011.json  1012.json  1013.json  1014.json  1015.json  1016.json  1017.json  1018.json  1019.json  102.json  1020.json  1021.json  1022.json  1023.json  1024.json  1025.json  1026.json  1027.json  1028.json  1029.json  103.json  1030.json  1031.json  1032.json  (+3012 more)
src/animated_art_engine/: __init__.py
step1_layers_to_spritesheet/: build.py
step2_spritesheet_to_generative_sheet/: package-lock.json  package.json
step2_spritesheet_to_generative_sheet/src/: config.js  main.js
