[project]
name = "animated-art-engine"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shun Kakinoki", email = "shunkakinoki@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pip>=24.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/animated_art_engine"]
